# rp2040-boot2

./: .gitignore  CMakeLists.txt  README.md  asm_builder.py
.github/workflows/: builder.yaml
linker/: rp2040_boot2.ld
output/asm/: bl2_w25q128jv.s
output/map/: bl2_w25q128jv.map
src/: CMakeLists.txt
src/w25q128jv/: boot_stage2.s
tools/cmake/: boot2_builder.cmake  tool_chain.cmake
tools/docker/: Dockerfile  arm_gnu_toolchain.sh  cmake_install.sh
tools/python/: bin2asm.py
